objects/Supervision__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <description>Taken from Status on Research Period. Returns TRUE for all Statuses except Completed</description>
        <formula>Research_Period__r.Active__c</formula>
        <inlineHelpText>Taken from Status on Research Period</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Application_Review_Record__c</fullName>
        <formula>IF(ISBLANK(Research_Period__c),TRUE,FALSE)</formula>
        <label>Application Review Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Log</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipName>Supervisors</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Audit_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Trigger</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Collaborating_Provider_temp__c</fullName>
        <label>HESA Collaborating Provider (temp)</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Legacy_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Manually created Supervision record for 15/16 HESA Student return.</inlineHelpText>
        <label>HESA Legacy Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Unit_of_Assessment_temp__c</fullName>
        <label>HESA Unit of Assessment (temp)</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Location_of_Supervision__c</fullName>
        <label>Location of Supervision</label>
        <picklist>
            <picklistValues>
                <fullName>LSTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Meeting_Date_Time__c</fullName>
        <label>Meeting Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Meeting_Date_Time_del__c</fullName>
        <label>Meeting Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Meeting_Objectives__c</fullName>
        <label>Meeting Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Other_Location__c</fullName>
        <label>Other Location</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Outcome_Next_Steps__c</fullName>
        <label>Outcome/Next Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Primary_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to denote Supervisor will provide primary supervision of student</inlineHelpText>
        <label>Primary Supervisor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Research_Department__c</fullName>
        <description>Data from 15/16 HESA return REFData spreadsheet</description>
        <label>Research Department</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parasitology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vector Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Sciences</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Research_Period_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Research Period_old</label>
        <referenceTo>Research_Year__c</referenceTo>
        <relationshipLabel>Supervisions</relationshipLabel>
        <relationshipName>Supervisors1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Research_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Research Period</label>
        <referenceTo>Research_Period__c</referenceTo>
        <relationshipLabel>Supervisors</relationshipLabel>
        <relationshipName>Supervisions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The person you are trying to look up is not a member of staff. Please check your spelling and try again.</errorMessage>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <infoMessage>Find the name of your supervisor.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students Supervising</relationshipLabel>
        <relationshipName>Supervisions_leg</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Status of Supervision record. Available values vary by record type.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed with caveats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Programme_Stage__c</fullName>
        <formula>TEXT(Student_Programme__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Programme Stage</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Programme</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Oops... you can only associate Supervisors with Student Programmes where Record Type = PGR Programme</errorMessage>
            <filterItems>
                <field>Student_Programme__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>PGR Programme</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>Supervisions</relationshipLabel>
        <relationshipName>Supervisors</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Supervisor_Name_temp__c</fullName>
        <inlineHelpText>Temporary field for 15/16 HESA PGR return. Allows manual checking against REFData sheet.</inlineHelpText>
        <label>Supervisor Name (temp)</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Supervisor_Name_temp_del__c</fullName>
        <inlineHelpText>Temporary field for 15/16 HESA PGR return.</inlineHelpText>
        <label>Supervisor Name (free text)</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Supervisor_Name_text__c</fullName>
        <formula>Supervisor__r.FirstName &amp; " " &amp;  Supervisor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Name (text)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Supervisor_Registration_Required__c</fullName>
        <description>Set to FALSE if 'Supervisor__c' lookup is blank.</description>
        <formula>IF(ISBLANK(Supervisor__c),TRUE,FALSE)</formula>
        <inlineHelpText>Supervisor name not found in list of Registered Supervisors. Check spelling or create/update Staff Member as Registered Supervisor.</inlineHelpText>
        <label>Supervisor Registration Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Supervisor_Weighting__c</fullName>
        <label>Supervisor Weighting</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The person you are trying to look up is not a registered supervisor or not a member of staff.</errorMessage>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <filterItems>
                <field>Contact.Registered_Supervisor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Find the name of the Supervisor.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students Supervising</relationshipLabel>
        <relationshipName>Supervisions</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Join between staff and student programme for managing of PGR supervisions</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Supervision</label><nameField>
        <label>Supervision Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Supervisions</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>Supervisor__c</columns>
        <columns>NAME</columns>
        <columns>Research_Department__c</columns>
        <columns>Student_Programme_Stage__c</columns>
        <columns>Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Student_Programme__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Students_I_am_Supervising</fullName>
        <columns>NAME</columns>
        <columns>Student_Programme__c</columns>
        <columns>Research_Period__c</columns>
        <columns>Supervisor_Weighting__c</columns>
        <columns>Student_Programme_Stage__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Supervision__c.Test</value>
        </filters>
        <filters>
            <field>Student_Programme_Stage__c</field>
            <operation>equals</operation>
            <value>Pre-Registered,Registered</value>
        </filters>
        <label>Students I am Supervising</label>
    </listViews><listViews>
        <fullName>Supervisor_Registration_Requests</fullName>
        <columns>NAME</columns>
        <columns>Supervisor_Name_temp_del__c</columns>
        <columns>Supervisor_Weighting__c</columns>
        <columns>Location_of_Supervision__c</columns>
        <columns>Student_Programme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supervisor_Registration_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HESA_Legacy_Record__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Supervisor Registration Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Approved_Supervisors</fullName>
        <active>true</active>
        <description>Associates Staff with Research Years and Student Programmes to record approved Supervisors.</description>
        <label>Approved Supervisors</label>
    </recordTypes><recordTypes>
        <fullName>Meeting</fullName>
        <active>true</active>
        <description>General meetings with Supervisor(s) and other staff</description>
        <label>Meeting</label>
    </recordTypes><recordTypes>
        <fullName>PAP</fullName>
        <active>true</active>
        <description>Performance Assessment Panels</description>
        <label>PAP</label>
    </recordTypes><recordTypes>
        <fullName>Specials</fullName>
        <active>true</active>
        <description>All special meetings and interactions which require recording</description>
        <label>Specials</label>
    </recordTypes><recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes><recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Soft skills workshops and other sessions</description>
        <label>Workshop</label>
    </recordTypes></CustomObject>